# Introduction_to_supercomputing

./: .gitignore  CMakeLists.txt  ПараллельноеПрограммированиеВС++.pptx
notebooks/: MPI_1.ipynb  MPI_10.ipynb  MPI_11.ipynb  MPI_12.ipynb  MPI_2.ipynb  MPI_3.ipynb  MPI_4.ipynb  MPI_5.ipynb  MPI_6.ipynb  MPI_7.ipynb  MPI_8.ipynb  MPI_9.ipynb  OpenMP_1.ipynb  OpenMP_2.ipynb  OpenMP_3.ipynb  OpenMP_4.ipynb  OpenMP_5.ipynb  OpenMP_6.ipynb  OpenMP_7.ipynb  OpenMP_8.ipynb  OpenMP_9.ipynb
scripts/: MPI_1.ps1  MPI_1.sh  MPI_10.ps1  MPI_10.sh  MPI_10_job.sh  MPI_11.ps1  MPI_11.sh  MPI_11_job.sh  MPI_12.ps1  MPI_12.sh  MPI_12_job.sh  MPI_1_job.sh  MPI_2.ps1  MPI_2.sh  MPI_2_job.sh  MPI_3.ps1  MPI_3.sh  MPI_3_job.sh  MPI_4.ps1  MPI_4.sh  MPI_4_job.sh  MPI_5.ps1  MPI_5.sh  MPI_5_job.sh  MPI_6.ps1  MPI_6.sh  MPI_6_job.sh  MPI_7.ps1  MPI_7.sh  MPI_7_job.sh  MPI_8.ps1  MPI_8.sh  MPI_8_job.sh  MPI_9.ps1  MPI_9.sh  MPI_9_job.sh  OpenMP_1.ps1  OpenMP_2.ps1  OpenMP_3.ps1  OpenMP_4.ps1  (+5 more)
src/: MPI_1.cpp  MPI_10.cpp  MPI_11.cpp  MPI_12.cpp  MPI_2.cpp  MPI_3.cpp  MPI_4.cpp  MPI_5.cpp  MPI_6.cpp  MPI_7.cpp  MPI_8.cpp  MPI_9.cpp  OpenMP_1.cpp  OpenMP_2.cpp  OpenMP_3.cpp  OpenMP_4.cpp  OpenMP_5.cpp  OpenMP_6.cpp  OpenMP_7.cpp  OpenMP_8.cpp  OpenMP_9.cpp
